// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> : matches snapshot 1`] = `
<div>
  <button
    data-testid="button"
    type="button"
  />
</div>
`;

exports[`<Button /> : matches snapshot as anchor 1`] = `
<div>
  <a
    data-testid="button"
    href="#"
  />
</div>
`;
